<resources>
    <string name="app_name">Attendance</string>
    <string name="title_activity_login_professor">Login_professor_activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account">Don\'t have an account?<b>Register Now</b></string>
    <string-array name="choose">
        <item>Student</item>
        <item>Staff</item>
    </string-array>
    <string-array name="Branch">
        <item>CSE</item>
        <item>ECE</item>
        <item>IT</item>
    </string-array>
    <string-array name="Section">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string-array name="CSE">
        <item>Bhutagni</item>
        <item>Chitagni</item>
        <item>Jathragni</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_manit">Welcome to Manit</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="ID">ID</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registration_form">Registration Form</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="logout">Logout</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="you_are_logged_in_as">you are Logged in as</string>
    <string name="rigestration_number">Rigestration Number</string>
    <string name="hello">Hello Mr.%1$s</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="welcome_to">Welcome to</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="branc">Branch:</string>
    <string name="sect">Section:</string>
    <string name="indian_institute_of_information_technology_una">Indian Institute of Information Technology, Una</string>
</resources>